--- a/Course_calculation_tool.html
+++ b/Course_calculation_tool.html
@@ -128,7 +128,7 @@
 	  {
 		x = 1;  // 直接策略为打1停1
 		resultDiv.textContent = "最小预罐装是：" + t;
-		policyDiv.textContent = "疗程为正常打";
+		policyDiv.textContent = "疗程为正常";
 	} else {
 		x = y / (t - y);
 		let floorX = Math.floor(x);
