--- a/Course_calculation_tool.html
+++ b/Course_calculation_tool.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>预罐装计算工具</title>
+  <title>预罐封计算工具</title>
   <style>
     body {
       font-family: "Helvetica Neue", sans-serif;
