--- a/Course_calculation_tool.html
+++ b/Course_calculation_tool.html
@@ -111,8 +111,8 @@
       let rounded = Math.ceil(y);
       let t = 0;
 
-      if (rounded > 10) {
-        resultDiv.textContent = "最小预罐装是：错误值";
+      if (rounded > 10 || rounded < 0) {
+        resultDiv.textContent = "最小预罐封是：错误值";
         policyDiv.textContent = "";
         return;
       }
@@ -127,7 +127,7 @@
       if (t === y) 
 	  {
 		x = 1;  // 直接策略为打1停1
-		resultDiv.textContent = "最小预罐装是：" + t;
+		resultDiv.textContent = "最小预罐封是：" + t;
 		policyDiv.textContent = "疗程为正常";
 	} else {
 		x = y / (t - y);
@@ -136,7 +136,7 @@
 		let errorDown = y * (floorX + 1) - t * floorX;
 		let errorUp = y * (ceilX + 1) - t * ceilX;
 		x = Math.abs(errorDown) < Math.abs(errorUp) ? floorX : ceilX;
-		resultDiv.textContent = "最小预罐装是：" + t;
+		resultDiv.textContent = "最小预罐封是：" + t;
 		policyDiv.textContent = "疗程为打 " + x + " 停 1";
 	}
 
